// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsPageComponent should  render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        0title
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="1"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="0productAltText0"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                0productAltText0
              </h3>
              <p
                class="mt-4"
              >
                0productDescription0
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                1productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                2productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should have the correct routerLinks on product-items 1`] = `
<div
  id="root5"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        0title
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="1"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="0productAltText0"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                0productAltText0
              </h3>
              <p
                class="mt-4"
              >
                0productDescription0
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                1productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                2productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should not render <app-product-item> when there is no item provided 1`] = `
<div
  id="root2"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        0title
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should not render the template when there is no VM provided 1`] = `
<div
  id="root0"
  ng-version="18.2.8"
>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render 1 <app-product-item> when 1 item is provided 1`] = `
<div
  id="root3"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        0title
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="1"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="0productAltText0"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                0productAltText0
              </h3>
              <p
                class="mt-4"
              >
                0productDescription0
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;

exports[`ProductsPageComponent should render 5 <app-product-item> when 5 items are provided 1`] = `
<div
  id="root4"
  ng-version="18.2.8"
>
  <app-frame
    ng-reflect-vm="[object Object]"
  >
    <section
      class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
    >
      <h2>
        0title
      </h2>
      <app-product-list>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
        >
          <app-product-item
            class="h-full"
            ng-reflect-router-link="1"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="0productAltText0"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                0productAltText0
              </h3>
              <p
                class="mt-4"
              >
                0productDescription0
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                1productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                2productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                1productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                2productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                1productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="1productAltText"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                1productAltText
              </h3>
              <p
                class="mt-4"
              >
                2productDescription
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="2"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="productAltText1"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                productAltText1
              </h3>
              <p
                class="mt-4"
              >
                productDescription1
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <app-product-item
            class="h-full"
            ng-reflect-router-link="3"
            ng-reflect-vm="[object Object]"
            tabindex="0"
          >
            <a
              class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
            >
              <img
                alt="productAltText2"
                class="w-auto h-auto object-cover rounded-md"
                src="assets/lepke.jpg"
              />
              <h3
                class="font-bold text-xl sm:text-2xl mt-4"
              >
                productAltText2
              </h3>
              <p
                class="mt-4"
              >
                productDescription2
              </p>
            </a>
            <!--container-->
          </app-product-item>
          <!--container-->
        </div>
      </app-product-list>
    </section>
    <!--container-->
  </app-frame>
  <!--container-->
</div>
`;
